--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -1,6 +1,12 @@
 @charset 'utf-8'
 
 // -------------------------------------------
+//  fonts
+// -------------------------------------------
+
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;400;500;600;700&family=Noto+Sans+SC:wght@300;400;500;700;900&family=Noto+Sans+TC:wght@300;400;500;700;900&family=Poppins:wght@300;400;500;600;700&display=swap')
+
+// -------------------------------------------
 //  config
 // -------------------------------------------
 
@@ -20,5 +26,5 @@
 //  project
 // -------------------------------------------
 
-@import 'projects/_basic.sass'
-@import 'projects/_layout.sass'
+@import 'project/_basic.sass'
+@import 'project/_layout.sass'
