--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -10,7 +10,7 @@
 //  config
 // -------------------------------------------
 
-@import 'config/_variables.scss'
+@import 'config/_variables.sass'
 @import 'config/_mixins.sass'
 
 // -------------------------------------------
