--- a/assets/sass/project/_basic.sass
+++ b/assets/sass/project/_basic.sass
@@ -89,6 +89,9 @@ a
   letter-spacing: 0.1em !important
 
 // images
+.imgFill
+  background-size: cover
+  background-position: center center
 .pic-block
   img
     display: block
