--- a/assets/sass/project/pages/_index.sass
+++ b/assets/sass/project/pages/_index.sass
@@ -241,9 +241,10 @@
         left: -2.5px
         right: -2.5px
         bottom: -2.5px
-        background: url('~assets/images/project/home/border.png') no-repeat
+        background-image: url('~assets/images/project/home/border.png')
+        background-size: 100% 100%
         @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
-          background: url('~assets/images/project/home/border-2x.png') no-repeat
+          background-image: url('~assets/images/project/home/border-2x.png')
       .addition-item-inner
         position: relative
         z-index: 1
