--- a/templates/header.pug
+++ b/templates/header.pug
@@ -323,7 +323,7 @@ header.site-header
               li.list-item
                 n-link(:to="localePath('/login')")
                   span.icon-inline.icon-fs
-                    img.svg(src=imgSvg+"icon-personal.svg")
+                    img-svg(name="icon-personal")
                   span.txt {{ $t('actions.login') }}
               li.list-item
                 n-link(:to="localePath('/register')")
@@ -340,7 +340,7 @@ header.site-header
                 span.user-more-deposit.ff-sans.lh-115 $ 0.00
                 button.btn.p-0.lh-100.user-more-toggle.dropdown-toggle.text-reset#user-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent")
                   .icon-block.icon-fs
-                    img.svg(src=imgSvg+"icon-chevron-down.svg" alt="")
+                    img-svg(name="icon-chevron-down")
                 .user-more-dropdown.dropdown-menu(aria-labelledby="user-toggle")
                   .actions
                     ul.d-flex-center.list-unstyled
@@ -350,7 +350,8 @@ header.site-header
                             .link-btn-inner
                               span.d-flex-center.btn-blueGradient.rounded-circle.icon-block.icon-fs
                                 span.btn-inner
-                                  img.svg(src=imgSvg+icon+".svg" alt="")
+                                  //- img.svg(src=imgSvg+icon+".svg" alt="")
+                                  img-svg(name=icon)
                               span.txt.d-block.mt-1=title
                       +actionItem('deposit', 'icon-deposit', '存款')
                       +actionItem('transfer', 'icon-transfer', '轉帳')
@@ -362,7 +363,8 @@ header.site-header
                           n-link.link-btn(:to="(localePath('/member/" + url + "'))")
                             .link-btn-inner.d-flex-ac
                               span.d-flex-center.icon-block.icon-fs.rounded-circle
-                                img.svg(src=imgSvg+icon+".svg" alt="")
+                                //- img.svg(src=imgSvg+icon+".svg" alt="")
+                                img-svg(name=icon)
                               if block
                                 span.title.d-flex-ac.justify-content-between
                                   span.txt=title
