--- a/assets/sass/config/_mixins.sass
+++ b/assets/sass/config/_mixins.sass
@@ -380,7 +380,7 @@
 // rounded button
 =btn-rounded($value)
   height: $value
-  border-radius: $value
+  border-radius: 50rem
 
 // line clamp
 =line-clamp($value)
