--- a/assets/sass/modules/_bootstrap-custom.sass
+++ b/assets/sass/modules/_bootstrap-custom.sass
@@ -32,6 +32,9 @@ input, button, select, optgroup, textarea
 .btn
   border: none
   border-radius: 0
+  color: inherit
+  &:hover
+    color: initial
   &:focus
     box-shadow: none
 
