--- a/assets/sass/project/_basic.sass
+++ b/assets/sass/project/_basic.sass
@@ -199,18 +199,16 @@ img.svg
       +translateY(2px)
 .btn-blue
   background-color: #008AD6
-  color: #ffffff
   +media-hover
     +transition-property(background-color .3s ease)
   +media-hover-style
-    background-color: #0081c8
+    background-color: #0071af
 .btn-darkGray
   background-color: #404040
-  color: #ffffff
   +media-hover
     +transition-property(background-color .3s ease)
   +media-hover-style
-    background-color: #353535
+    background-color: #252525
 .btn-blueGradient, .btn-blueGradient2
   position: relative
   overflow: hidden
